[package]
name = "chatty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
